--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "family = ['risha raichik']"
+    "family = ['risha raichik', mendel raichik]\n"
    ]
   },
   {
