Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,11 +110,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['risha raichik', 'mendel raichik', 'mussi raichik']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "family.append('mussi raichik')\n",
+    "family"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "family.append('mussi raici')"
+    "family.insert"
    ]
   },
   {
