Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -131,11 +131,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['levi raichik', 'risha raichik', 'mendel raichik', 'mussi raichik']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "family.insert"
+    "family.insert(0, 'levi raichik')\n",
+    "family"
    ]
   },
   {
