--- a/index.ipynb
+++ b/index.ipynb
@@ -152,19 +152,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "family = [x.title() ]"
+    "family = [x.title() for x in family]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Levi Raichik', 'Risha Raichik', 'Mendel Raichik', 'Mussi Raichik']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "family"
+   ]
   },
   {
    "cell_type": "code",
